# OpenGLDemos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  imgui.ini
.ccls-cache/@@home@mafo@dev@OpenGLDemos/: @home@mafo@etc@clang+llvm-13.0.0@lib@clang@13.0.0@include@__stddef_max_align_t.h.blob  @home@mafo@etc@clang+llvm-13.0.0@lib@clang@13.0.0@include@stdarg.h.blob  @home@mafo@etc@clang+llvm-13.0.0@lib@clang@13.0.0@include@stddef.h.blob  @home@mafo@etc@clang+llvm-13.0.0@lib@clang@13.0.0@include@stdint.h.blob  @usr@include@GL@gl.h.blob  @usr@include@GL@glext.h.blob  @usr@include@KHR@khrplatform.h.blob  @usr@include@alloca.h.blob  @usr@include@asm-generic@errno-base.h.blob  @usr@include@asm-generic@errno.h.blob  @usr@include@assert.h.blob  @usr@include@c++@10@array.blob  @usr@include@c++@10@backward@auto_ptr.h.blob  @usr@include@c++@10@backward@binders.h.blob  @usr@include@c++@10@bits@alloc_traits.h.blob  @usr@include@c++@10@bits@allocated_ptr.h.blob  @usr@include@c++@10@bits@allocator.h.blob  @usr@include@c++@10@bits@atomic_base.h.blob  @usr@include@c++@10@bits@atomic_lockfree_defines.h.blob  @usr@include@c++@10@bits@basic_ios.h.blob  @usr@include@c++@10@bits@basic_ios.tcc.blob  @usr@include@c++@10@bits@basic_string.h.blob  @usr@include@c++@10@bits@basic_string.tcc.blob  @usr@include@c++@10@bits@char_traits.h.blob  @usr@include@c++@10@bits@charconv.h.blob  @usr@include@c++@10@bits@codecvt.h.blob  @usr@include@c++@10@bits@concept_check.h.blob  @usr@include@c++@10@bits@cpp_type_traits.h.blob  @usr@include@c++@10@bits@cxxabi_forced.h.blob  @usr@include@c++@10@bits@cxxabi_init_exception.h.blob  @usr@include@c++@10@bits@exception.h.blob  @usr@include@c++@10@bits@exception_defines.h.blob  @usr@include@c++@10@bits@exception_ptr.h.blob  @usr@include@c++@10@bits@fstream.tcc.blob  @usr@include@c++@10@bits@functexcept.h.blob  @usr@include@c++@10@bits@functional_hash.h.blob  @usr@include@c++@10@bits@hash_bytes.h.blob  @usr@include@c++@10@bits@invoke.h.blob  @usr@include@c++@10@bits@ios_base.h.blob  @usr@include@c++@10@bits@istream.tcc.blob  (+174 more)
.ccls-cache/@home@mafo@dev@OpenGLDemos/: src@Geometry@Mesh.h.blob  src@Rendering@Buffer.h.blob  src@Rendering@Material.h  src@Rendering@Material.h.blob  src@Rendering@RenderObject.h.blob  src@Rendering@Renderer.h  src@Rendering@Renderer.h.blob  src@Rendering@Shader.h  src@Rendering@Shader.h.blob  src@Rendering@Texture.h  src@Rendering@Texture.h.blob  src@Rendering@VertexArray.h.blob  src@Rendering@error_handling.h.blob  src@demos@hello_triangles@hellotriangles.cpp  src@demos@hello_triangles@hellotriangles.cpp.blob  src@demos@hello_triangles@hellotriangles.h.blob  src@demos@opengldemo.h.blob
Assets/soviet_trainer_spitfire/: scene.gltf
Shaders/: Background.frag.glsl  Background.vert.glsl  Basic.frag.glsl  Basic.vert.glsl  Camera.frag.glsl  Camera.vert.glsl  Cubemap.frag.glsl  Cubemap.vert.glsl  Downsample.frag.glsl  Lambert.frag.glsl  Light.frag.glsl  Microfacet.frag.glsl  MicrofacetModified.frag.glsl  MicrofacetTexture.frag.glsl  Normals.frag.glsl  Parametric.frag.glsl  Quad.frag.glsl  Quad.vert.glsl  Sample.vert.glsl  ShadowMap.frag.glsl  ShadowMap.geom.glsl  ShadowMap.vert.glsl  ShadowMapDebug.frag.glsl  ShadowMapTest.frag.glsl  Specular.frag.glsl  Threshold.frag.glsl  Upsample.frag.glsl  Weight.frag.glsl  anim.frag.glsl  anim.vert.glsl
build-Release/: CMakeCache.txt  Makefile  OpenGLDemos  cmake_install.cmake
build-Release/OpenGLDemos_autogen/: moc_predefs.h
build-Release/OpenGLDemos_autogen/UVLADIE3JM/: moc_mainwindow.cpp
build-Release/OpenGLDemos_autogen/include/: ui_mainwindow.h
build-Release/Shaders/: Lambert.frag.glsl  Microfacet.frag.glsl  MicrofacetModified.frag.glsl  Parametric.frag.glsl
build-Release/libs/qtimgui/: Makefile  cmake_install.cmake
src/: Application.cpp  Buffer.cpp  Buffer.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  VertexArray.cpp  VertexArray.h  imgui.ini  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopenglwidget.cpp  myopenglwidget.h  opengldemo.cpp  opengldemo.h
src/Geometry/: BezierCurve.cpp  BezierCurve.h  BezierSurface.cpp  BezierSurface.h  Cube.cpp  Cube.h  Cylinder.cpp  Cylinder.h  Light.cpp  Light.h  LightCube.cpp  LightCube.h  Mesh.cpp  Mesh.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Utils.cpp  Utils.h
src/Rendering/: Aabb.cpp  Aabb.h  Bone.cpp  Bone.h  Buffer.cpp  Buffer.h  Framebuffer.cpp  Framebuffer.h  Light.cpp  Light.h  Material.cpp  Material.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  error_handling.h
src/demos/: camera.cpp  camera.h  opengldemo.cpp  opengldemo.h
src/hello_camera/: camera.cpp  camera.h  hellocamera.cpp  hellocamera.h
src/hello_spheres/: hellospheres.cpp  hellospheres.h  spheres.cpp  spheres.h
src/hello_triangles/: hellotriangles.cpp  hellotriangles.h
(+37 files in other folders)
